--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.14",
+    "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
+    "@fullcalendar/react": "^6.1.14",
+    "@fullcalendar/timegrid": "^6.1.14",
     "@nextui-org/button": "^2.0.34",
+    "@nextui-org/card": "^2.0.31",
     "@nextui-org/input": "^2.2.2",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
@@ -18,7 +24,6 @@
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
     "react": "^18",
-    "react-big-calendar": "^1.13.0",
     "react-dom": "^18"
   },
   "devDependencies": {
