--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/card": "^2.0.31",
     "@nextui-org/input": "^2.2.2",
     "@nextui-org/react": "^2.4.2",
+    "@nextui-org/select": "^2.2.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
     "date-fns": "^3.6.0",
